--- a/login.html
+++ b/login.html
@@ -16,11 +16,11 @@
                 <form id="login-form">
                     <div class="input-group" style="margin-bottom: 1rem;">
                         <label for="login-email">이메일</label>
-                        <input type="email" id="login-email" required placeholder="이메일을 입력하세요.">
+                        <input type="email" id="login-email" required placeholder="이메일을 입력하세요">
                     </div>
                     <div class="input-group" style="margin-bottom: 1.5rem;">
                         <label for="login-password">비밀번호</label>
-                        <input type="password" id="login-password" required placeholder="비밀번호를 입력하세요.">
+                        <input type="password" id="login-password" required placeholder="비밀번호를 입력하세요">
                     </div>
                     <button type="submit" class="channel-button">로그인</button>
                 </form>
