--- a/login.html
+++ b/login.html
@@ -12,6 +12,7 @@
     <div class="app-container">
         <div class="card">
             <h1 style="text-align: center; margin-bottom: 2rem;">B2B 출고 시스템</h1>
+            <h2 id="auth-title" style="text-align: center;">로그인</h2>
             <div id="auth-form">
                 <form id="login-form">
                     <div class="input-group" style="margin-bottom: 1rem;">
